updated AnimeEstimates in getUserPublicData
